--- a/src/pages/portafolio/Portafolio.html
+++ b/src/pages/portafolio/Portafolio.html
@@ -1,5 +1,5 @@
 <section class="s-contenido">
-  <div class="s-perfil">
+  <div class="s-perfil" id="perfil">
     <div>
       <img src="" alt="" class="s-imagen" />
     </div>
@@ -11,6 +11,69 @@
         omnis, quae saepe reiciendis at eaque, corrupti et recusandae dolorem,
         laboriosam placeat quam.
       </p>
+    </div>
+  </div>
+  <div class="s-tecnologias" id="tecnologias">
+    <div class="s-t-titulo">
+      <h2>FullStack</h2>
+    </div>
+    <div class="s-t-iconos">
+      <div>
+        <img src="/public/java.png" alt="" id="java" /><br />
+        <label for="java">Java</label>
+      </div>
+      <div>
+        <img src="/public/spring.png" alt="" id="spring" class="spring" /><br />
+        <label for="spring">Spring</label>
+      </div>
+      <div>
+        <img
+          src="/public/postman.png"
+          alt=""
+          id="postman"
+          class="postman"
+        /><br />
+        <label for="postman">Postman</label>
+      </div>
+      <div>
+        <img src="/public/git.png" alt="" id="git" /><br />
+        <label for="git">Git</label>
+      </div>
+      <div>
+        <img src="/public/c-sharp.png" alt="" id="c-sharp" /><br />
+        <label for="c-sharp">C-Sharp</label>
+      </div>
+    </div>
+    <div class="s-t-iconos">
+      <div>
+        <img src="/public/react.png" alt="" id="react" /><br />
+        <label for="react">React</label>
+      </div>
+      <div>
+        <img src="/public/js.png" alt="" id="javascript" /><br />
+        <label for="javascript">JavaScript</label>
+      </div>
+      <div>
+        <img src="/public/typescript.png" alt="" id="typescript" /><br />
+        <label for="typescript">TypeScript</label>
+      </div>
+      <div>
+        <img src="/public/html.png" alt="" id="html" /><br />
+        <label for="html">HTML</label>
+      </div>
+      <div>
+        <img src="/public/css.png" alt="" id="css" /><br />
+        <label for="css">CSS</label>
+      </div>
+    </div>
+  </div>
+  <div class="s-proyectos">
+    <div class="s-p-titulo">
+      <h2>Proyectos</h2>
+    </div>
+    <div class="s-p-proyectos">
+      <div class="s-p-proyecto">Frontend</div>
+      <div class="s-p-proyecto">Backend</div>
     </div>
   </div>
   <link rel="stylesheet" href="/src/pages/portafolio/Portafolio.css" />
