--- a/src/pages/portafolio/Portafolio.html
+++ b/src/pages/portafolio/Portafolio.html
@@ -67,13 +67,24 @@
       </div>
     </div>
   </div>
-  <div class="s-proyectos">
+  <div class="s-proyectos" id="proyectos">
     <div class="s-p-titulo">
       <h2>Proyectos</h2>
     </div>
     <div class="s-p-proyectos">
       <div class="s-p-proyecto">Frontend</div>
       <div class="s-p-proyecto">Backend</div>
+    </div>
+  </div>
+  <div>
+    <div>
+      <h2>Habilidades</h2>
+    </div>
+    <div>
+      <p>Habilidades</p>
+    </div>
+    <div>
+      <p>CV</p>
     </div>
   </div>
   <link rel="stylesheet" href="/src/pages/portafolio/Portafolio.css" />
