--- a/src/pages/portafolio/Portafolio.html
+++ b/src/pages/portafolio/Portafolio.html
@@ -76,7 +76,7 @@
       <div class="s-p-proyecto">Backend</div>
     </div>
   </div>
-  <div>
+  <div id="habilidades">
     <div>
       <h2>Habilidades</h2>
     </div>
