Nuevos elementos en portafolio

--- a/src/pages/portafolio/Portafolio.html
+++ b/src/pages/portafolio/Portafolio.html
@@ -5,11 +5,17 @@
     </div>
     <div class="s-resumen">
       <h1>Jhonatan Jaimes</h1>
+      <h3>Programador</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-        mollitia architecto minima praesentium odio aliquid sed voluptates
-        omnis, quae saepe reiciendis at eaque, corrupti et recusandae dolorem,
-        laboriosam placeat quam.
+        Desarrollador orientado al backend con formación técnica y experiencia
+        en la creación de soluciones estructuradas, escalables y centradas en la
+        lógica de negocio. Manejo sólidos fundamentos en programación orientada
+        a objetos con Java, así como en el diseño de estructuras de datos y
+        automatización de tareas. Además, cuento con experiencia en el
+        desarrollo de scripts para programas de modelado 3D y conocimien- tos en
+        tecnologías del lado del cliente, lo que me permite integrar ade-
+        cuadamente las capas del sistema y aportar una visión completa al
+        desarrollo de software.
       </p>
     </div>
   </div>
