--- a/src/pages/portafolio/Portafolio.html
+++ b/src/pages/portafolio/Portafolio.html
@@ -1,7 +1,7 @@
 <section class="s-contenido">
   <div class="s-perfil" id="perfil">
-    <div>
-      <img src="" alt="" class="s-imagen" />
+    <div class="d-img">
+      <img src="../public/foto-002.jpg" alt="mi-foto" class="s-imagen" />
     </div>
     <div class="s-resumen">
       <h1>Jhonatan Jaimes</h1>
@@ -29,7 +29,7 @@
         <label for="java">Java</label>
       </div>
       <div>
-        <img src="/public/spring.png" alt="" id="spring" class="spring" /><br />
+        <img src="/public/spring.png" alt="" id="spring" /><br />
         <label for="spring">Spring</label>
       </div>
       <div>
@@ -49,8 +49,6 @@
         <img src="/public/c-sharp.png" alt="" id="c-sharp" /><br />
         <label for="c-sharp">C-Sharp</label>
       </div>
-    </div>
-    <div class="s-t-iconos">
       <div>
         <img src="/public/react.png" alt="" id="react" /><br />
         <label for="react">React</label>
@@ -74,7 +72,7 @@
     </div>
   </div>
   <div class="s-proyectos" id="proyectos">
-    <div class="s-p-titulo">
+    <div class="s-t-titulo">
       <h2>Proyectos</h2>
     </div>
     <div class="s-p-proyectos">
@@ -82,8 +80,8 @@
       <div class="s-p-proyecto">Backend</div>
     </div>
   </div>
-  <div id="habilidades">
-    <div>
+  <div class="s-habilidades" id="habilidades">
+    <div class="s-t-titulo">
       <h2>Habilidades</h2>
     </div>
     <div>
