--- a/src/pages/portafolio/Portafolio.html
+++ b/src/pages/portafolio/Portafolio.html
@@ -33,6 +33,10 @@
         <label for="spring">Spring</label>
       </div>
       <div>
+        <img src="/public/python.png" alt="" id="python" /><br />
+        <label for="python">Python</label>
+      </div>
+      <div>
         <img
           src="/public/postman.png"
           alt=""
@@ -84,12 +88,35 @@
     <div class="s-t-titulo">
       <h2>Habilidades</h2>
     </div>
-    <div>
-      <p>Habilidades</p>
+    <div class="s-h-lista">
+      <div class="s-h-frag">
+        <p><strong>Creación de back-end</strong></p>
+        <a href="https://github.com/B1Jhonatan/back-obra">Java SpringBoot</a>
+      </div>
+      <div class="s-h-frag">
+        <p><strong>Automatizacion python</strong></p>
+        <a href="https://github.com/B1Jhonatan/PyScripts">Python</a>
+      </div>
+      <div class="s-h-frag">
+        <p><strong>Creación de back-end</strong></p>
+        <a href="https://github.com/B1Jhonatan/front-obra">TypeScript React</a>
+      </div>
     </div>
     <div>
-      <p>CV</p>
+      <p class="s-h-blandas"><strong>Habilidades blandas</strong></p>
+      <div class="s-h-lista-h">
+        <p>Adaptabilidad</p>
+        <p>Puntualidad</p>
+        <p>Creatividad gracias a mis roles como arquitecto</p>
+        <p>Comunicación efectiva</p>
+        <p>Pensamiento critico</p>
+        <p>Resolución de problemas</p>
+        <p>Liderazgo</p>
+      </div>
     </div>
+  </div>
+  <div>
+    <p>CV</p>
   </div>
   <link rel="stylesheet" href="/src/pages/portafolio/Portafolio.css" />
 </section>
