Descargar cv completado

--- a/src/pages/portafolio/Portafolio.html
+++ b/src/pages/portafolio/Portafolio.html
@@ -98,7 +98,7 @@
         <a href="https://github.com/B1Jhonatan/PyScripts">Python</a>
       </div>
       <div class="s-h-frag">
-        <p><strong>Creación de back-end</strong></p>
+        <p><strong>Creación de front-end</strong></p>
         <a href="https://github.com/B1Jhonatan/front-obra">TypeScript React</a>
       </div>
     </div>
@@ -115,8 +115,10 @@
       </div>
     </div>
   </div>
-  <div>
-    <p>CV</p>
+  <div class="s-contain-cv">
+    <a class="s-cv" href="../public/CV_Programador_2025a.pdf" download
+      >Descargar CV</a
+    >
   </div>
   <link rel="stylesheet" href="/src/pages/portafolio/Portafolio.css" />
 </section>
