--- a/src/pages/portafolio/Portafolio.html
+++ b/src/pages/portafolio/Portafolio.html
@@ -91,15 +91,21 @@
     <div class="s-h-lista">
       <div class="s-h-frag">
         <p><strong>Creación de back-end</strong></p>
-        <a href="https://github.com/B1Jhonatan/back-obra">Java SpringBoot</a>
+        <a href="https://github.com/B1Jhonatan/back-obra" target="_blank"
+          >Java SpringBoot</a
+        >
       </div>
       <div class="s-h-frag">
         <p><strong>Automatizacion python</strong></p>
-        <a href="https://github.com/B1Jhonatan/PyScripts">Python</a>
+        <a href="https://github.com/B1Jhonatan/PyScripts" target="_blank"
+          >Python</a
+        >
       </div>
       <div class="s-h-frag">
         <p><strong>Creación de front-end</strong></p>
-        <a href="https://github.com/B1Jhonatan/front-obra">TypeScript React</a>
+        <a href="https://github.com/B1Jhonatan/front-obra" target="_blank"
+          >TypeScript React</a
+        >
       </div>
     </div>
     <div>
