--- a/src/pages/portafolio/Portafolio.html
+++ b/src/pages/portafolio/Portafolio.html
@@ -80,19 +80,31 @@
       <h2>Proyectos</h2>
     </div>
     <div class="s-p-proyectos">
-      <div class="s-p-proyecto">Frontend</div>
-      <div class="s-p-proyecto">Backend</div>
-    </div>
-  </div>
-  <div class="s-habilidades" id="habilidades">
-    <div class="s-t-titulo">
-      <h2>Habilidades</h2>
+      <a class="s-p-proyecto" href="/proyecto-fullstack">
+        <p><strong>Proyecto FullStack</strong></p>
+        <br />
+        <img src="../public/img-site-org.png" alt="img" class="s-p-img-full" />
+        <div class="s-p-parrafo">
+          <p><strong>Backend:</strong> Java, SpringBoot</p>
+          <p><strong>Frontend:</strong> TypeScript, React</p>
+          <p><strong>Deploy:</strong> rencer.com</p>
+        </div>
+      </a>
     </div>
     <div class="s-h-lista">
+      <div class="s-t-titulo">
+        <h2>Nuevos proyectos en curso</h2>
+      </div>
       <div class="s-h-frag">
-        <p><strong>Creación de back-end</strong></p>
+        <p><strong>Calculadora-obra-backend</strong></p>
         <a href="https://github.com/B1Jhonatan/back-obra" target="_blank"
           >Java SpringBoot</a
+        >
+      </div>
+      <div class="s-h-frag">
+        <p><strong>Calculadora-obra-frontend</strong></p>
+        <a href="https://github.com/B1Jhonatan/front-obra" target="_blank"
+          >TypeScript React</a
         >
       </div>
       <div class="s-h-frag">
@@ -101,16 +113,14 @@
           >Python</a
         >
       </div>
-      <div class="s-h-frag">
-        <p><strong>Creación de front-end</strong></p>
-        <a href="https://github.com/B1Jhonatan/front-obra" target="_blank"
-          >TypeScript React</a
-        >
-      </div>
     </div>
+  </div>
+  <div class="s-habilidades" id="habilidades">
     <div>
-      <p class="s-h-blandas"><strong>Habilidades blandas</strong></p>
       <div class="s-h-lista-h">
+        <div class="s-t-titulo">
+          <h2>Habilidades blandas</h2>
+        </div>
         <p>Adaptabilidad</p>
         <p>Puntualidad</p>
         <p>Creatividad gracias a mis roles como arquitecto</p>
