--- a/public/components-static/portafolio-static/Portafolio.html
+++ b/public/components-static/portafolio-static/Portafolio.html
@@ -136,5 +136,8 @@
       >Descargar CV</a
     >
   </div>
-  <link rel="stylesheet" href="/src/pages/portafolio/Portafolio.css" />
+  <link
+    rel="stylesheet"
+    href="./components-static/portafolio-static/Portafolio.css"
+  />
 </section>
