--- a/public/components-static/proyecto-static/Proyecto-front.html
+++ b/public/components-static/proyecto-static/Proyecto-front.html
@@ -84,5 +84,8 @@
       desencripta las palabras encriptadas.
     </p>
   </div>
-  <link rel="stylesheet" href="/src/pages/proyecto/Proyecto-front.css" />
+  <link
+    rel="stylesheet"
+    href="/components-static/proyecto-static/Proyecto-front.css"
+  />
 </section>
