--- a/public/components-static/portafolio-static/Portafolio.html
+++ b/public/components-static/portafolio-static/Portafolio.html
@@ -1,7 +1,7 @@
 <section class="s-contenido">
   <div class="s-perfil" id="perfil">
     <div class="d-img">
-      <img src="../public/foto-002.jpg" alt="mi-foto" class="s-imagen" />
+      <img src="/foto-002.jpg" alt="mi-foto" class="s-imagen" />
     </div>
     <div class="s-resumen">
       <h1>Jhonatan Jaimes</h1>
@@ -25,52 +25,47 @@
     </div>
     <div class="s-t-iconos">
       <div>
-        <img src="/public/java.png" alt="" id="java" /><br />
+        <img src="/java.png" alt="" id="java" /><br />
         <label for="java">Java</label>
       </div>
       <div>
-        <img src="/public/spring.png" alt="" id="spring" /><br />
+        <img src="/spring.png" alt="" id="spring" /><br />
         <label for="spring">Spring</label>
       </div>
       <div>
-        <img src="/public/python.png" alt="" id="python" /><br />
+        <img src="/python.png" alt="" id="python" /><br />
         <label for="python">Python</label>
       </div>
       <div>
-        <img
-          src="/public/postman.png"
-          alt=""
-          id="postman"
-          class="postman"
-        /><br />
+        <img src="/postman.png" alt="" id="postman" class="postman" /><br />
         <label for="postman">Postman</label>
       </div>
       <div>
-        <img src="/public/git.png" alt="" id="git" /><br />
+        <img src="/git.png" alt="" id="git" /><br />
         <label for="git">Git</label>
       </div>
       <div>
-        <img src="/public/c-sharp.png" alt="" id="c-sharp" /><br />
+        <img src="/c-sharp.png" alt="" id="c-sharp" /><br />
         <label for="c-sharp">C-Sharp</label>
       </div>
       <div>
-        <img src="/public/react.png" alt="" id="react" /><br />
+        <img src="/react.png" alt="" id="react" /><br />
         <label for="react">React</label>
       </div>
       <div>
-        <img src="/public/js.png" alt="" id="javascript" /><br />
+        <img src="/js.png" alt="" id="javascript" /><br />
         <label for="javascript">JavaScript</label>
       </div>
       <div>
-        <img src="/public/typescript.png" alt="" id="typescript" /><br />
+        <img src="/typescript.png" alt="" id="typescript" /><br />
         <label for="typescript">TypeScript</label>
       </div>
       <div>
-        <img src="/public/html.png" alt="" id="html" /><br />
+        <img src="/html.png" alt="" id="html" /><br />
         <label for="html">HTML</label>
       </div>
       <div>
-        <img src="/public/css.png" alt="" id="css" /><br />
+        <img src="/css.png" alt="" id="css" /><br />
         <label for="css">CSS</label>
       </div>
     </div>
@@ -83,7 +78,7 @@
       <a class="s-p-proyecto" href="/proyecto-fullstack">
         <p><strong>Proyecto FullStack</strong></p>
         <br />
-        <img src="../public/img-site-org.png" alt="img" class="s-p-img-full" />
+        <img src="/img-site-org.png" alt="img" class="s-p-img-full" />
         <div class="s-p-parrafo">
           <p><strong>Backend:</strong> Java, SpringBoot</p>
           <p><strong>Frontend:</strong> TypeScript, React</p>
