--- a/public/components-static/proyecto-static/Proyecto-front.html
+++ b/public/components-static/proyecto-static/Proyecto-front.html
@@ -29,7 +29,7 @@
       rendimiento eficiente en el lado del cliente.
     </p>
     <br />
-    <img src="../public/img-site-org.png" alt="img-project" />
+    <img src="/img-site-org.png" alt="img-project" />
     <br />
     <br />
     <h3>Backend</h3>
@@ -62,7 +62,7 @@
     <br />
     <p><strong>Configuracion CORS</strong></p>
     <br />
-    <img src="../public/img-site-code.png" alt="img-cors" />
+    <img src="/img-site-code.png" alt="img-cors" />
     <p>
       La restriccion de los cors ya que solo se permite el acceso a este backend
       desde un unico sitio web.
@@ -70,7 +70,7 @@
     <br />
     <p><strong>Wake up</strong></p>
     <br />
-    <img src="../public/img-site-wake.png" alt="img-wake-up" />
+    <img src="/img-site-wake.png" alt="img-wake-up" />
     <p>
       Endpoint para llamar al backend debido a que esta en un servicio gratuito
       de hosting y este entra en sleep despues de 15 min. de inactividad.
@@ -78,7 +78,7 @@
     <br />
     <p><strong>Endpoints del backend</strong></p>
     <br />
-    <img src="../public/img-site-endp.png" alt="img-endpoint" />
+    <img src="/img-site-endp.png" alt="img-endpoint" />
     <p>
       El backend cuenta con dos endpoints uno que encripta palabras y otro que
       desencripta las palabras encriptadas.
