--- a/public/components-static/portafolio-static/Portafolio.html
+++ b/public/components-static/portafolio-static/Portafolio.html
@@ -75,7 +75,11 @@
       <h2>Proyectos</h2>
     </div>
     <div class="s-p-proyectos">
-      <a class="s-p-proyecto" href="/proyecto-fullstack" target="_blank">
+      <a
+        class="s-p-proyecto"
+        href="https://encode-decode-page.onrender.com/"
+        target="_blank"
+      >
         <p><strong>Proyecto FullStack</strong></p>
         <br />
         <img src="/img-site-org.png" alt="img" class="s-p-img-full" />
