--- a/public/components-static/portafolio-static/Portafolio.html
+++ b/public/components-static/portafolio-static/Portafolio.html
@@ -75,14 +75,18 @@
       <h2>Proyectos</h2>
     </div>
     <div class="s-p-proyectos">
-      <a class="s-p-proyecto" href="/#proyecto-fullstack" target="_blank">
+      <a
+        class="s-p-proyecto"
+        href="/proyecto-fullstack"
+        onclick="window.location.href='/proyecto-fullstack'; return false;"
+      >
         <p><strong>Proyecto FullStack</strong></p>
         <br />
         <img src="/img-site-org.png" alt="img" class="s-p-img-full" />
         <div class="s-p-parrafo">
           <p><strong>Backend:</strong> Java, SpringBoot</p>
           <p><strong>Frontend:</strong> TypeScript, React</p>
-          <p><strong>Deploy:</strong> rencer.com</p>
+          <p><strong>Deploy:</strong> render.com</p>
         </div>
       </a>
     </div>
